Fixed styling in Clippings Manager when Synced Clippings folder is read-only
(part of issue #419)
- Clipping content textbox and source URL edit button

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -631,6 +631,10 @@ ul.fancytree-container {
     font-size: 13px;
 }
 
+#item-properties > #clipping-text[disabled] {
+    opacity: 0.4;
+}
+
 #item-properties > #placeholder-toolbar {
     order: 3;
     flex: 0 1 auto;
